discussion/kv_engine/181671/181671_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Filter out events in the front end thread

Change-Id: I447e30e2b66cb9e383c5a03e3ea292e6c5aeee3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-24 05:32:22.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-24 05:48:34.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21401/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_audit.cc:493:13: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
            NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON,
            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21401/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21401/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50620/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_audit.cc(493): error C2065: "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50620/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11224/ : FAILURE

Compile error at [2022-10-24T05:42:31.855Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11224/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11132/ : FAILURE

Compile error at [2022-10-24T05:38:47.264Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11132/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24672/ : FAILURE

Compile error at [2022-10-24T05:34:26.410Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24672/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23432/ : FAILURE

Compile error at [2022-10-24T05:39:03.614Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23432/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23837/ : FAILURE

Compile error at [2022-10-24T05:39:47.188Z] ../kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23837/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31857/ : FAILURE

Compile error at [2022-10-24T05:41:58.740Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31857/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22850/ : FAILURE

Compile error at [2022-10-24T05:44:15.362Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22850/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20662/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42472/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
